A new version of My Tester is out. It is no longer possible to pass string to parameter $value of assertions assertCount and assertNotCount. It is now possible to skip a test method after it was started, see README.md for details.

For complete list of changes since previous version, see CHANGELOG.md.