@@ -2,3 +2,4 @@ extensions:
     mytester: MyTester\Bridges\NetteDI\MyTesterExtension
 mytester:
     colors: true
+    coverageFormat: cobertura
